# maestro-economics

./: .gitignore  AGENTS.md  LICENSE  README.md  modal_deploy.py  modal_worker.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: public-shell-boundary.yml
cli/: __main__.py
runtime/: __init__.py  context.py  handler.py  transforms.py
skills/computation/: SKILL.md
skills/computation/scripts/: download.sh  status.sh  submit.sh
skills/maestro-economics/: SKILL.md
tests/: test_cli.py  test_context.py  test_handler.py  test_transforms.py
