[project]
name = "maestro-economics"
version = "0.1.0"
description = "Open-source research computing framework for economists"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "click>=8.0", "httpx>=0.27"]

[project.optional-dependencies]
gpu = ["jax[cuda12]", "jaxlib"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
mecon = "cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
